# app/docs/swagger.json
@@ -1236,13 +1236,6 @@
                 "summary": "Verify answer",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer \u003cJWT token\u003e",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "Answer details",
                         "name": "request",
                         "in": "body",
@@ -1300,13 +1293,6 @@
                 ],
                 "summary": "Compile",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer \u003cJWT token\u003e",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Code for compiler",
                         "name": "request",
@@ -1440,15 +1426,11 @@
         "dtos.RegisterRequest": {
             "type": "object",
             "required": [
-                "chat_gpt_token",
                 "email",
                 "name",
                 "password"
             ],
             "properties": {
-                "chat_gpt_token": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string",
                     "maxLength": 100
@@ -1679,12 +1661,6 @@
             "type": "object",
             "properties": {
                 "avatar_url": {
-                    "type": "string"
-                },
-                "chat_gpt_model": {
-                    "type": "string"
-                },
-                "chat_gpt_token": {
                     "type": "string"
                 },
                 "email": {
