# app/http/controllers/utils.go
@@ -4,12 +4,10 @@ import (
 	"educ-gpt/http/dtos"
 	"educ-gpt/models"
 	"educ-gpt/services"
-	"educ-gpt/utils/httputils"
 	"educ-gpt/utils/httputils/valid"
 	"errors"
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
-	"gorm.io/gorm"
 	"net/http"
 )
 
@@ -17,6 +15,9 @@ type UtilsController struct {
 	aiSrv     services.AIService
 	promptSrv services.PromptService
 	userSrv   services.UserService
+
+	openRouterModel string
+	openRouterToken string
 }
 
 // Compile code by AI
@@ -25,7 +26,6 @@ type UtilsController struct {
 // @Tags         utils
 // @Accept       json
 // @Produce      json
-// @Param Authorization header string true "Bearer <JWT token>"
 // @Param        request body dtos.CompileRequest true "Code for compiler"
 // @Success      200 {object} dtos.ResultResponse "Compiled code"
 // @Failure      400 {object} dtos.ValidationErrorResponse "Invalid request body"
@@ -50,29 +50,11 @@ func (u UtilsController) Compile(ctx *gin.Context) {
 		return
 	}
 
-	userid, err := httputils.GetUserId(ctx)
-	if err != nil {
-		ctx.JSON(http.StatusUnauthorized, dtos.UnauthorizedResponse())
-		return
-	}
-
-	user, err := u.userSrv.GetById(userid)
-	if err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			ctx.JSON(http.StatusUnauthorized, dtos.UnauthorizedResponse())
-			return
-		}
-
-		ctx.JSON(http.StatusInternalServerError, dtos.InternalServerErrorResponse())
-		return
-	}
-
 	prompt := u.promptSrv.CompileCode(req.Code, req.Language)
 
 	var res dtos.ResultResponse
 
-	err = u.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*models.DialogItem{{Text: prompt, IsUser: true}}, &res)
-	if err != nil {
+	if err := u.aiSrv.GetAnswer(u.openRouterToken, u.openRouterModel, []*models.DialogItem{{Text: prompt, IsUser: true}}, &res); err != nil {
 		if errors.Is(err, services.ErrAIRequestFailed) {
 			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: err.Error()})
 			return
@@ -91,7 +73,6 @@ func (u UtilsController) Compile(ctx *gin.Context) {
 // @Tags         utils
 // @Accept       json
 // @Produce      json
-// @Param Authorization header string true "Bearer <JWT token>"
 // @Param        request body dtos.VerifyAnswerRequest true "Answer details"
 // @Success      200 {object} services.PromptProblemResponse "Answer verification result"
 // @Failure      400 {object} dtos.ValidationErrorResponse "Invalid request body"
@@ -101,19 +82,6 @@ func (u UtilsController) Compile(ctx *gin.Context) {
 // @Router       /utils/check_answer [post]
 func (r RoadmapController) VerifyAnswer(ctx *gin.Context) {
 	var req dtos.VerifyAnswerRequest
-
-	userId, err := httputils.GetUserId(ctx)
-	if err != nil {
-
-		ctx.JSON(http.StatusUnauthorized, dtos.UnauthorizedResponse())
-		return
-	}
-
-	user, err := r.userSrv.GetById(userId)
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, dtos.InternalServerErrorResponse())
-		return
-	}
 
 	if err := ctx.ShouldBindJSON(&req); err != nil {
 		var valErr validator.ValidationErrors
@@ -131,8 +99,7 @@ func (r RoadmapController) VerifyAnswer(ctx *gin.Context) {
 	prompt := r.promptSrv.VerifyAnswer(req.Problem, req.Answer, req.Language)
 	var target services.PromptProblemResponse
 
-	err = r.aiSrv.GetAnswer(user.ChatGptToken, user.ChatGptModel, []*models.DialogItem{{Text: prompt, IsUser: true}}, &target)
-	if err != nil {
+	if err := r.aiSrv.GetAnswer(r.openRouterToken, r.openRouterModel, []*models.DialogItem{{Text: prompt, IsUser: true}}, &target); err != nil {
 		if errors.Is(err, services.ErrAIRequestFailed) {
 			ctx.JSON(http.StatusConflict, dtos.ErrorResponse{Error: err.Error()})
 			return
@@ -149,6 +116,8 @@ func NewUtilsController(
 	aiSrv services.AIService,
 	promptSrv services.PromptService,
 	userSrv services.UserService,
+	openRouterModel string,
+	openRouterToken string,
 ) *UtilsController {
-	return &UtilsController{aiSrv, promptSrv, userSrv}
+	return &UtilsController{aiSrv, promptSrv, userSrv, openRouterModel, openRouterToken}
 }
